don't hide toolbar overflow for dialogs, fixes #3212
Closes #3212

Merge request studip/studip!2264

--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -426,7 +426,6 @@ form.default .ck-source-editing-area textarea {
 /* toolbar fix for dialogs */
 .studip-dialog {
     .ck-editor {
-        overflow: hidden;
         .ck-editor__editable_inline {
             height: 200px;
             resize: vertical;
